force-app/main/default/objects/TrailblazerProfileStatus__c/TrailblazerProfileStatus__c.object-meta.xml
<CustomObject>
    <label>Trailblazer Profile Status</label>
    <nameField>
        <label>Trailblazer Counts Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trailblazer Profile Statuses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>