force-app/main/default/objects/TrailblazerProfileStatus__c/fields/BadgesForNextRank__c.field-meta.xml
<CustomField>
    <fullName>BadgesForNextRank__c</fullName>
    <label>Badges for Next Rank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>