force-app/main/default/objects/TrailblazerProfileStatus__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Trailblazer Profile Statuses</relationshipLabel>
    <relationshipName>TrailblazerProfileStatuses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>