force-app/main/default/objects/TrailblazerProfileStatus__c/fields/PointsForNextRank__c.field-meta.xml
<CustomField>
    <fullName>PointsForNextRank__c</fullName>
    <label>Points for Next Rank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>