force-app/main/default/objects/TrailblazerProfileStatus__c/fields/RankImageUrl__c.field-meta.xml
<CustomField>
    <fullName>RankImageUrl__c</fullName>
    <label>Rank Image Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>