force-app/main/default/objects/TrailblazerProfileStatus__c/fields/TotalCompletedTrails__c.field-meta.xml
<CustomField>
    <fullName>TotalCompletedTrails__c</fullName>
    <label>Total Completed Trails</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>