force-app/main/default/objects/TrailblazerProfileStatus__c/fields/TotalEarnedBadges__c.field-meta.xml
<CustomField>
    <fullName>TotalEarnedBadges__c</fullName>
    <label>Total Earned Badges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>