force-app/main/default/objects/TrailblazerProfileStatus__c/fields/TotalEarnedPoints__c.field-meta.xml
<CustomField>
    <fullName>TotalEarnedPoints__c</fullName>
    <label>Total Earned Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>